changed background color to better view issue on Safari on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,8 @@ header a{
     display: block;
     position: fixed;
     background-image: url("../img/icon_menu.png");
-    background-color: var(--main_off);
+    /* background-color: var(--main_off); */
+    background-color: red;
     box-shadow: var(--shadow);
     border-radius: 50%;
 
